# amongo

./: README.md  setup.cfg  setup.py
amongo/: __init__.py  auth.py  datatypes.py  models.py  mongo.py  typings.py
