[metadata]
name = amongo
version = 0.3.2
author = oMegaPB
author_email = gunter56741@gmail.com
description = small fully async mongo driver for local mongod supporting auth
url = https://github.com/oMegaPB/amongo
project_urls =
    Bug Tracker = https://github.com/oMegaPB/amongo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = amongo
packages = find:
python_requires = >=3.8

[options.packages.find]
where = amongo